Linear SVC discarded

--- a/Analysis_Linear_SVC.ipynb
+++ b/Analysis_Linear_SVC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    " cookies = pd.read_csv('clean_cookies.csv')"
+    "cookies = pd.read_csv('trans_cookies.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>sugar to flour ratio</th>\n",
        "      <th>sugar index</th>\n",
        "      <th>bake temp</th>\n",
@@ -56,7 +55,6 @@
        "      <th>pH</th>\n",
        "      <th>grams baking soda</th>\n",
        "      <th>bake time</th>\n",
-       "      <th>quality</th>\n",
        "      <th>weight</th>\n",
        "      <th>crunch factor</th>\n",
        "      <th>aesthetic appeal</th>\n",
@@ -66,159 +64,155 @@
        "      <th>raisins</th>\n",
        "      <th>peanut_butter</th>\n",
        "      <th>butter type_melted</th>\n",
+       "      <th>quality</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>9.5</td>\n",
-       "      <td>300</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>136.0</td>\n",
-       "      <td>0.99367</td>\n",
-       "      <td>8.10</td>\n",
-       "      <td>0.44</td>\n",
-       "      <td>12.1</td>\n",
+       "      <td>-0.464475</td>\n",
+       "      <td>0.875168</td>\n",
+       "      <td>-0.941445</td>\n",
+       "      <td>-0.894671</td>\n",
+       "      <td>0.367978</td>\n",
+       "      <td>-0.333415</td>\n",
+       "      <td>-0.742210</td>\n",
+       "      <td>-0.612460</td>\n",
+       "      <td>1.337694</td>\n",
+       "      <td>0.310813</td>\n",
+       "      <td>-0.688397</td>\n",
+       "      <td>-0.024171</td>\n",
+       "      <td>-1.444260</td>\n",
+       "      <td>-0.558017</td>\n",
+       "      <td>-0.539402</td>\n",
+       "      <td>1.527101</td>\n",
+       "      <td>-0.117525</td>\n",
+       "      <td>0.566112</td>\n",
        "      <td>8</td>\n",
-       "      <td>15.2</td>\n",
-       "      <td>1.30</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>520</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>113.0</td>\n",
-       "      <td>0.99429</td>\n",
-       "      <td>8.16</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>8.4</td>\n",
+       "      <td>-0.604563</td>\n",
+       "      <td>-0.451709</td>\n",
+       "      <td>-0.083989</td>\n",
+       "      <td>0.206440</td>\n",
+       "      <td>-0.042954</td>\n",
+       "      <td>-0.122242</td>\n",
+       "      <td>-0.370369</td>\n",
+       "      <td>-0.334466</td>\n",
+       "      <td>-1.760020</td>\n",
+       "      <td>-0.772054</td>\n",
+       "      <td>0.729634</td>\n",
+       "      <td>-0.024171</td>\n",
+       "      <td>-1.444260</td>\n",
+       "      <td>-0.558017</td>\n",
+       "      <td>-0.539402</td>\n",
+       "      <td>1.527101</td>\n",
+       "      <td>-0.117525</td>\n",
+       "      <td>0.566112</td>\n",
        "      <td>7</td>\n",
-       "      <td>12.4</td>\n",
-       "      <td>1.71</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>360</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>106.0</td>\n",
-       "      <td>0.98746</td>\n",
-       "      <td>8.21</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>-0.954783</td>\n",
+       "      <td>-0.751326</td>\n",
+       "      <td>-0.707593</td>\n",
+       "      <td>0.148487</td>\n",
+       "      <td>-0.168020</td>\n",
+       "      <td>-2.448553</td>\n",
+       "      <td>-0.060502</td>\n",
+       "      <td>2.097979</td>\n",
+       "      <td>2.928411</td>\n",
+       "      <td>-1.932270</td>\n",
+       "      <td>0.971737</td>\n",
+       "      <td>-0.024171</td>\n",
+       "      <td>0.692396</td>\n",
+       "      <td>1.792059</td>\n",
+       "      <td>-0.539402</td>\n",
+       "      <td>-0.654836</td>\n",
+       "      <td>-0.117525</td>\n",
+       "      <td>0.566112</td>\n",
        "      <td>9</td>\n",
-       "      <td>9.4</td>\n",
-       "      <td>1.78</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>10.5</td>\n",
-       "      <td>490</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>124.0</td>\n",
-       "      <td>0.99630</td>\n",
-       "      <td>8.14</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>10.5</td>\n",
+       "      <td>-0.954783</td>\n",
+       "      <td>1.089181</td>\n",
+       "      <td>-0.200915</td>\n",
+       "      <td>0.612112</td>\n",
+       "      <td>0.153579</td>\n",
+       "      <td>0.562368</td>\n",
+       "      <td>-0.494316</td>\n",
+       "      <td>-1.237946</td>\n",
+       "      <td>-0.001858</td>\n",
+       "      <td>-0.849402</td>\n",
+       "      <td>0.314601</td>\n",
+       "      <td>-0.024171</td>\n",
+       "      <td>0.692396</td>\n",
+       "      <td>-0.558017</td>\n",
+       "      <td>-0.539402</td>\n",
+       "      <td>-0.654836</td>\n",
+       "      <td>-0.117525</td>\n",
+       "      <td>0.566112</td>\n",
        "      <td>7</td>\n",
-       "      <td>12.2</td>\n",
-       "      <td>1.59</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>-0.534519</td>\n",
+       "      <td>-0.644320</td>\n",
+       "      <td>0.890393</td>\n",
+       "      <td>-1.416250</td>\n",
+       "      <td>-1.472281</td>\n",
+       "      <td>0.937030</td>\n",
+       "      <td>-0.804184</td>\n",
+       "      <td>0.291020</td>\n",
+       "      <td>-0.922800</td>\n",
+       "      <td>2.089810</td>\n",
+       "      <td>-0.688397</td>\n",
+       "      <td>-0.024171</td>\n",
+       "      <td>0.692396</td>\n",
+       "      <td>1.792059</td>\n",
+       "      <td>1.853904</td>\n",
+       "      <td>-0.654836</td>\n",
+       "      <td>-0.117525</td>\n",
+       "      <td>-1.766434</td>\n",
        "      <td>5</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>770</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>0.99740</td>\n",
-       "      <td>8.09</td>\n",
-       "      <td>0.57</td>\n",
-       "      <td>9.4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>19.8</td>\n",
-       "      <td>1.30</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id  sugar to flour ratio  sugar index  bake temp  chill time  calories  \\\n",
-       "0   1                  0.25          9.5        300        15.0     136.0   \n",
-       "1   2                  0.23          3.3        520        34.0     113.0   \n",
-       "2   3                  0.18          1.9        360        33.0     106.0   \n",
-       "3   4                  0.18         10.5        490        41.0     124.0   \n",
-       "4   5                  0.24          2.4        770         6.0      33.0   \n",
+       "   sugar to flour ratio  sugar index  bake temp  chill time  calories  \\\n",
+       "0             -0.464475     0.875168  -0.941445   -0.894671  0.367978   \n",
+       "1             -0.604563    -0.451709  -0.083989    0.206440 -0.042954   \n",
+       "2             -0.954783    -0.751326  -0.707593    0.148487 -0.168020   \n",
+       "3             -0.954783     1.089181  -0.200915    0.612112  0.153579   \n",
+       "4             -0.534519    -0.644320   0.890393   -1.416250 -1.472281   \n",
        "\n",
-       "   density    pH  grams baking soda  bake time  quality  weight  \\\n",
-       "0  0.99367  8.10               0.44       12.1        8    15.2   \n",
-       "1  0.99429  8.16               0.48        8.4        7    12.4   \n",
-       "2  0.98746  8.21               0.83       14.0        9     9.4   \n",
-       "3  0.99630  8.14               0.35       10.5        7    12.2   \n",
-       "4  0.99740  8.09               0.57        9.4        5    19.8   \n",
+       "    density        pH  grams baking soda  bake time    weight  crunch factor  \\\n",
+       "0 -0.333415 -0.742210          -0.612460   1.337694  0.310813      -0.688397   \n",
+       "1 -0.122242 -0.370369          -0.334466  -1.760020 -0.772054       0.729634   \n",
+       "2 -2.448553 -0.060502           2.097979   2.928411 -1.932270       0.971737   \n",
+       "3  0.562368 -0.494316          -1.237946  -0.001858 -0.849402       0.314601   \n",
+       "4  0.937030 -0.804184           0.291020  -0.922800  2.089810      -0.688397   \n",
        "\n",
-       "   crunch factor  aesthetic appeal  chocolate  nuts  oats  raisins  \\\n",
-       "0           1.30                 3          0     0     0        1   \n",
-       "1           1.71                 3          0     0     0        1   \n",
-       "2           1.78                 3          1     1     0        0   \n",
-       "3           1.59                 3          1     0     0        0   \n",
-       "4           1.30                 3          1     1     1        0   \n",
+       "   aesthetic appeal  chocolate      nuts      oats   raisins  peanut_butter  \\\n",
+       "0         -0.024171  -1.444260 -0.558017 -0.539402  1.527101      -0.117525   \n",
+       "1         -0.024171  -1.444260 -0.558017 -0.539402  1.527101      -0.117525   \n",
+       "2         -0.024171   0.692396  1.792059 -0.539402 -0.654836      -0.117525   \n",
+       "3         -0.024171   0.692396 -0.558017 -0.539402 -0.654836      -0.117525   \n",
+       "4         -0.024171   0.692396  1.792059  1.853904 -0.654836      -0.117525   \n",
        "\n",
-       "   peanut_butter  butter type_melted  \n",
-       "0              0                   1  \n",
-       "1              0                   1  \n",
-       "2              0                   1  \n",
-       "3              0                   1  \n",
-       "4              0                   0  "
+       "   butter type_melted  quality  \n",
+       "0            0.566112        8  \n",
+       "1            0.566112        7  \n",
+       "2            0.566112        9  \n",
+       "3            0.566112        7  \n",
+       "4           -1.766434        5  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,16 +223,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5175, 20)"
+       "(5138, 19)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -315,15 +309,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.17705314009661835\n",
-      "0.17681159420289855\n"
+      "0.5391727493917275\n",
+      "0.5184824902723736\n"
      ]
     }
    ],
@@ -334,24 +328,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  0,   0,   0,   0,   0,   0,   1,   0,   0],\n",
-       "       [  0,   0,   3,   0,   0,   0,   6,   0,   0],\n",
-       "       [  0,   0,  53,   0,   0,   0,  62,   0,   0],\n",
-       "       [  0,   0,  55,   0,   0,   0,  68,   0,   0],\n",
-       "       [  0,   0,  56,   0,   0,   1, 206,   0,   0],\n",
-       "       [  0,   0,  42,   0,   0,   0, 313,   0,   0],\n",
-       "       [  0,   0,   9,   0,   0,   2, 130,   0,   0],\n",
-       "       [  0,   0,   0,   0,   0,   0,  27,   0,   0],\n",
-       "       [  0,   0,   0,   0,   0,   0,   1,   0,   0]])"
+       "array([[  0,   0,   1,   0,   0,   0,   0,   0,   0],\n",
+       "       [  0,   0,   7,   2,   0,   0,   0,   0,   0],\n",
+       "       [  0,   0,  91,  19,   1,   1,   0,   0,   0],\n",
+       "       [  0,   0,  46,  53,   9,  13,   0,   0,   0],\n",
+       "       [  0,   0,   6,  30,  98, 127,   1,   0,   0],\n",
+       "       [  0,   0,   0,   3,  63, 278,  10,   0,   0],\n",
+       "       [  0,   0,   0,   0,   3, 125,  13,   0,   0],\n",
+       "       [  0,   0,   0,   0,   0,  20,   7,   0,   0],\n",
+       "       [  0,   0,   0,   0,   0,   1,   0,   0,   0]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,14 +359,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.17681159420289855\n"
+      "Accuracy:  0.5184824902723736\n"
      ]
     }
    ],
@@ -383,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -2522,8 +2516,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best score: 0.3314009661835749\n",
-      "Best parameters: {'C': 23}\n"
+      "Best score: 0.5335766423357664\n",
+      "Best parameters: {'C': 6}\n"
      ]
     },
     {
