Update cookies outliers

--- a/Drop_outliers.ipynb
+++ b/Drop_outliers.ipynb
@@ -686,19 +686,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### We decided to drop crunch factor and aesthetic appeal as they don't have any influence over quality."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-19T12:53:20.707086Z",
+     "start_time": "2019-04-19T12:53:20.700773Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "cookies = cookies.drop(columns='crunch factor', 'aesthetic appeal')"
+    "cookies = cookies.drop(columns=['crunch factor', 'aesthetic appeal'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-19T12:58:59.617983Z",
+     "start_time": "2019-04-19T12:58:59.531661Z"
+    }
+   },
+   "outputs": [],
    "source": [
-    "### We decided to drop crunch factor and aesthetic appeal as they don't have any "
+    "cookies.to_csv('clean_cookies_outlier.csv', index=False)"
    ]
   },
   {
@@ -706,9 +730,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "cookies.to_csv('clean_cookies_outlier.csv', index=False)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
