--- a/Random_Forest Analysis.ipynb
+++ b/Random_Forest Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:32:18.226872Z",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:29:41.276272Z",
@@ -27,12 +27,12 @@
    },
    "outputs": [],
    "source": [
-    "# Take the data and create train an test sets"
+    "# Take the data and create train an test sets with oversamplig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:29:49.719623Z",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:29:55.823297Z",
@@ -56,203 +56,22 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sugar to flour ratio</th>\n",
-       "      <th>sugar index</th>\n",
-       "      <th>bake temp</th>\n",
-       "      <th>chill time</th>\n",
-       "      <th>calories</th>\n",
-       "      <th>density</th>\n",
-       "      <th>pH</th>\n",
-       "      <th>grams baking soda</th>\n",
-       "      <th>bake time</th>\n",
-       "      <th>weight</th>\n",
-       "      <th>crunch factor</th>\n",
-       "      <th>aesthetic appeal</th>\n",
-       "      <th>chocolate</th>\n",
-       "      <th>nuts</th>\n",
-       "      <th>oats</th>\n",
-       "      <th>raisins</th>\n",
-       "      <th>peanut_butter</th>\n",
-       "      <th>butter type_melted</th>\n",
-       "      <th>quality</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>-0.464475</td>\n",
-       "      <td>0.875168</td>\n",
-       "      <td>-0.941445</td>\n",
-       "      <td>-0.894671</td>\n",
-       "      <td>0.367978</td>\n",
-       "      <td>-0.333415</td>\n",
-       "      <td>-0.742210</td>\n",
-       "      <td>-0.612460</td>\n",
-       "      <td>1.337694</td>\n",
-       "      <td>0.310813</td>\n",
-       "      <td>-0.688397</td>\n",
-       "      <td>-0.024171</td>\n",
-       "      <td>-1.444260</td>\n",
-       "      <td>-0.558017</td>\n",
-       "      <td>-0.539402</td>\n",
-       "      <td>1.527101</td>\n",
-       "      <td>-0.117525</td>\n",
-       "      <td>0.566112</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-0.604563</td>\n",
-       "      <td>-0.451709</td>\n",
-       "      <td>-0.083989</td>\n",
-       "      <td>0.206440</td>\n",
-       "      <td>-0.042954</td>\n",
-       "      <td>-0.122242</td>\n",
-       "      <td>-0.370369</td>\n",
-       "      <td>-0.334466</td>\n",
-       "      <td>-1.760020</td>\n",
-       "      <td>-0.772054</td>\n",
-       "      <td>0.729634</td>\n",
-       "      <td>-0.024171</td>\n",
-       "      <td>-1.444260</td>\n",
-       "      <td>-0.558017</td>\n",
-       "      <td>-0.539402</td>\n",
-       "      <td>1.527101</td>\n",
-       "      <td>-0.117525</td>\n",
-       "      <td>0.566112</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-0.954783</td>\n",
-       "      <td>-0.751326</td>\n",
-       "      <td>-0.707593</td>\n",
-       "      <td>0.148487</td>\n",
-       "      <td>-0.168020</td>\n",
-       "      <td>-2.448553</td>\n",
-       "      <td>-0.060502</td>\n",
-       "      <td>2.097979</td>\n",
-       "      <td>2.928411</td>\n",
-       "      <td>-1.932270</td>\n",
-       "      <td>0.971737</td>\n",
-       "      <td>-0.024171</td>\n",
-       "      <td>0.692396</td>\n",
-       "      <td>1.792059</td>\n",
-       "      <td>-0.539402</td>\n",
-       "      <td>-0.654836</td>\n",
-       "      <td>-0.117525</td>\n",
-       "      <td>0.566112</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-0.954783</td>\n",
-       "      <td>1.089181</td>\n",
-       "      <td>-0.200915</td>\n",
-       "      <td>0.612112</td>\n",
-       "      <td>0.153579</td>\n",
-       "      <td>0.562368</td>\n",
-       "      <td>-0.494316</td>\n",
-       "      <td>-1.237946</td>\n",
-       "      <td>-0.001858</td>\n",
-       "      <td>-0.849402</td>\n",
-       "      <td>0.314601</td>\n",
-       "      <td>-0.024171</td>\n",
-       "      <td>0.692396</td>\n",
-       "      <td>-0.558017</td>\n",
-       "      <td>-0.539402</td>\n",
-       "      <td>-0.654836</td>\n",
-       "      <td>-0.117525</td>\n",
-       "      <td>0.566112</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-0.534519</td>\n",
-       "      <td>-0.644320</td>\n",
-       "      <td>0.890393</td>\n",
-       "      <td>-1.416250</td>\n",
-       "      <td>-1.472281</td>\n",
-       "      <td>0.937030</td>\n",
-       "      <td>-0.804184</td>\n",
-       "      <td>0.291020</td>\n",
-       "      <td>-0.922800</td>\n",
-       "      <td>2.089810</td>\n",
-       "      <td>-0.688397</td>\n",
-       "      <td>-0.024171</td>\n",
-       "      <td>0.692396</td>\n",
-       "      <td>1.792059</td>\n",
-       "      <td>1.853904</td>\n",
-       "      <td>-0.654836</td>\n",
-       "      <td>-0.117525</td>\n",
-       "      <td>-1.766434</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   sugar to flour ratio  sugar index  bake temp  chill time  calories  \\\n",
-       "0             -0.464475     0.875168  -0.941445   -0.894671  0.367978   \n",
-       "1             -0.604563    -0.451709  -0.083989    0.206440 -0.042954   \n",
-       "2             -0.954783    -0.751326  -0.707593    0.148487 -0.168020   \n",
-       "3             -0.954783     1.089181  -0.200915    0.612112  0.153579   \n",
-       "4             -0.534519    -0.644320   0.890393   -1.416250 -1.472281   \n",
-       "\n",
-       "    density        pH  grams baking soda  bake time    weight  crunch factor  \\\n",
-       "0 -0.333415 -0.742210          -0.612460   1.337694  0.310813      -0.688397   \n",
-       "1 -0.122242 -0.370369          -0.334466  -1.760020 -0.772054       0.729634   \n",
-       "2 -2.448553 -0.060502           2.097979   2.928411 -1.932270       0.971737   \n",
-       "3  0.562368 -0.494316          -1.237946  -0.001858 -0.849402       0.314601   \n",
-       "4  0.937030 -0.804184           0.291020  -0.922800  2.089810      -0.688397   \n",
-       "\n",
-       "   aesthetic appeal  chocolate      nuts      oats   raisins  peanut_butter  \\\n",
-       "0         -0.024171  -1.444260 -0.558017 -0.539402  1.527101      -0.117525   \n",
-       "1         -0.024171  -1.444260 -0.558017 -0.539402  1.527101      -0.117525   \n",
-       "2         -0.024171   0.692396  1.792059 -0.539402 -0.654836      -0.117525   \n",
-       "3         -0.024171   0.692396 -0.558017 -0.539402 -0.654836      -0.117525   \n",
-       "4         -0.024171   0.692396  1.792059  1.853904 -0.654836      -0.117525   \n",
-       "\n",
-       "   butter type_melted  quality  \n",
-       "0            0.566112        8  \n",
-       "1            0.566112        7  \n",
-       "2            0.566112        9  \n",
-       "3            0.566112        7  \n",
-       "4           -1.766434        5  "
+       "(5138, 17)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
+    "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:30:03.462304Z",
@@ -265,12 +84,12 @@
       "text/plain": [
        "Index(['sugar to flour ratio', 'sugar index', 'bake temp', 'chill time',\n",
        "       'calories', 'density', 'pH', 'grams baking soda', 'bake time', 'weight',\n",
-       "       'crunch factor', 'aesthetic appeal', 'chocolate', 'nuts', 'oats',\n",
-       "       'raisins', 'peanut_butter', 'butter type_melted', 'quality'],\n",
+       "       'chocolate', 'nuts', 'oats', 'raisins', 'peanut_butter',\n",
+       "       'butter type_melted', 'quality'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cookies = data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:30:16.471171Z",
@@ -305,12 +133,29 @@
    },
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2,random_state=10, stratify = y)"
+    "#SMOTE\n",
+    "#from sklearn.model_selection import train_test_split\n",
+    "#X = cookies.drop(columns='quality')\n",
+    "#y = cookies['quality']\n",
+    "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "#from imblearn.over_sampling import SMOTE\n",
+    "#sm = SMOTE(k_neighbors=3, random_state=2)\n",
+    "#X_train_res, y_train_res = sm.fit_sample(X_train, y_train.ravel())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normal test train\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:31:20.231209Z",
@@ -324,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:33:27.670922Z",
@@ -336,7 +181,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/atwenter/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "/usr/local/lib/python3.7/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
       "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
      ]
     },
@@ -352,7 +197,7 @@
        "            warm_start=False)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:36:37.666803Z",
@@ -378,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:36:38.131406Z",
@@ -394,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:36:39.114998Z",
@@ -410,37 +255,37 @@
       "\n",
       "           3       0.00      0.00      0.00         1\n",
       "           4       0.00      0.00      0.00         9\n",
-      "           5       0.65      0.77      0.70       112\n",
-      "           6       0.56      0.52      0.54       121\n",
-      "           7       0.60      0.54      0.57       262\n",
-      "           8       0.57      0.72      0.64       354\n",
-      "           9       0.61      0.38      0.47       141\n",
-      "          10       0.78      0.26      0.39        27\n",
+      "           5       0.69      0.83      0.76       112\n",
+      "           6       0.58      0.55      0.56       121\n",
+      "           7       0.61      0.61      0.61       262\n",
+      "           8       0.62      0.74      0.67       354\n",
+      "           9       0.71      0.45      0.55       141\n",
+      "          10       0.88      0.26      0.40        27\n",
       "          11       0.00      0.00      0.00         1\n",
       "\n",
-      "   micro avg       0.59      0.59      0.59      1028\n",
-      "   macro avg       0.42      0.35      0.37      1028\n",
-      "weighted avg       0.59      0.59      0.58      1028\n",
+      "   micro avg       0.63      0.63      0.63      1028\n",
+      "   macro avg       0.45      0.38      0.40      1028\n",
+      "weighted avg       0.63      0.63      0.62      1028\n",
       "\n",
       "---\n",
-      "0.5904669260700389\n",
+      "0.632295719844358\n",
       "---\n",
-      "[[  0   0   0   1   0   0   0   0   0]\n",
-      " [  0   0   7   2   0   0   0   0   0]\n",
-      " [  0   0  86  22   3   1   0   0   0]\n",
-      " [  0   1  33  63  13  10   1   0   0]\n",
-      " [  0   0   7  21 142  91   1   0   0]\n",
-      " [  0   0   0   3  69 255  26   1   0]\n",
-      " [  0   0   0   0   8  78  54   1   0]\n",
-      " [  0   0   0   0   2  12   6   7   0]\n",
-      " [  0   0   0   0   1   0   0   0   0]]\n"
+      "[[  0   0   1   0   0   0   0   0   0]\n",
+      " [  1   0   6   2   0   0   0   0   0]\n",
+      " [  0   0  93  17   2   0   0   0   0]\n",
+      " [  0   0  29  66  18   7   1   0   0]\n",
+      " [  0   0   5  24 159  72   2   0   0]\n",
+      " [  0   0   0   3  72 261  18   0   0]\n",
+      " [  0   0   0   1  10  65  64   1   0]\n",
+      " [  0   0   0   0   0  15   5   7   0]\n",
+      " [  0   0   0   0   0   1   0   0   0]]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/atwenter/anaconda3/lib/python3.7/site-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
       "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
@@ -455,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:42:01.603678Z",
@@ -467,16 +312,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/atwenter/anaconda3/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 4 members, which is too few. The minimum number of members in any class cannot be less than n_splits=5.\n",
+      "/usr/local/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 4 members, which is too few. The minimum number of members in any class cannot be less than n_splits=5.\n",
       "  % (min_groups, self.n_splits)), Warning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best score: 0.6411192214111923\n",
-      "Best parameters: {'n_estimators': 194, 'class_weight': 'balanced'}\n"
      ]
     }
    ],
@@ -529,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   },
   "varInspector": {
    "cols": {
