Auto stash before merge of "master" and "origin/master"

--- a/Random_Forest Analysis.ipynb
+++ b/Random_Forest Analysis.ipynb
@@ -204,7 +204,7 @@
    ],
    "source": [
     "rfc = RandomForestClassifier()\n",
-    "rfc.fit(X_train, y_train)"
+    "rfc.fit(X_train_res, y_train_res)"
    ]
   },
   {
